--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.active{
+  @apply text-red-500
+}
+
 @layer base {
   body{
     @apply bg-blue-600 py-2 px-5
